--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gcal-client",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/main.js",
+  "main": "src/main.js",
   "scripts": {
     "start": "NODE_ENV=development electron .",
     "build": "./build.sh"
