--- a/src/package.json
+++ b/src/package.json
@@ -1,11 +1,14 @@
 {
   "name": "gcal-client",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "main.js",
   "author": "shwld",
   "license": "MIT",
   "devDependencies": {
     "electron": "^2.0.2"
+  },
+  "dependencies": {
+    "date-fns": "^1.29.0"
   }
 }
